# ft_python_piscine

./: pyproject.toml  test.py
00/: ex02_tester.py  ex03_tester.py  ex08_tester.py  ex09_tester.py
00/ex00/: Hello.py
00/ex01/: format_ft_time.py
00/ex02/: find_ft_type.py
00/ex03/: NULL_not_found.py
00/ex04/: whatis.py
00/ex05/: building.py
00/ex06/: filterstring.py  ft_filter.py
00/ex07/: sos.py
00/ex08/: Loading.py
00/ex09/: LICENSE  README.md  setup.py
00/ex09/ft_test/: __init__.py  test.py
01/ex00/: give_bmi.py  tester.py
01/ex01/: array2D.py  tester.py
01/ex02/: load_image.py  tester.py
01/ex03/: load_image.py  tester.py  zoom.py
01/ex04/: rotate.py  tester.py
01/ex05/: load_image.py  pimp_image.py  tester.py
02/: pyproject.toml
02/ex00/: load_csv.py
02/ex00_testcase/: test.csv  test_trailing_comma.csv  test_wrong_dimension copy.csv  tester.py
02/ex01/: aff_life.py
02/ex01_testcase/: tester.py
02/ex02/: aff_pop.py
02/ex02_testcase/: tester.py
02/ex03/: projection_life.py
02/ex03_testcase/: test_no_1900.csv  tester.py
